[gd_scene load_steps=55 format=3 uid="uid://cj0lgh51c800b"]

[ext_resource type="Script" uid="uid://ckgkthpei513i" path="res://Main/CarNode/car_node.gd" id="1_ww58n"]
[ext_resource type="PackedScene" uid="uid://c4bddafomkpae" path="res://Assets/Racecars/Jupiter5.glb" id="2_4b6dd"]
[ext_resource type="PackedScene" uid="uid://fgsyilf2lqgu" path="res://Main/RaceCamera/race_camera.tscn" id="2_gxyaa"]
[ext_resource type="PackedScene" uid="uid://baihp1uqo8w8d" path="res://Main/Nodes/ScreenEffects/cinematic_bars.tscn" id="3_f4y26"]
[ext_resource type="AudioStream" uid="uid://d3neboyethwra" path="res://Assets/SFX/8bitdrift.wav" id="3_plo0f"]
[ext_resource type="Texture2D" uid="uid://ckufbdklj28i3" path="res://Assets/Particles/purple_square.png" id="4_ocgml"]
[ext_resource type="AudioStream" uid="uid://ctlyym7w75ts8" path="res://Assets/SFX/8bitmotor.wav" id="5_n15bs"]
[ext_resource type="AudioStream" uid="uid://csp5rsh1miwxe" path="res://Assets/SFX/8bitspark.wav" id="6_11ujl"]
[ext_resource type="AudioStream" uid="uid://c1l1gy1br21jr" path="res://Assets/SFX/8bitfire.wav" id="6_56tl7"]
[ext_resource type="AudioStream" uid="uid://5cevn2gh2o0t" path="res://Assets/SFX/8bitturbo.wav" id="6_88u8a"]
[ext_resource type="AudioStream" uid="uid://c0yh0dm22sj0x" path="res://Assets/SFX/8bitlightning.wav" id="7_f4wrq"]
[ext_resource type="PackedScene" uid="uid://blb16i07t5to8" path="res://Main/Nodes/ScreenEffects/circle_transition.tscn" id="13_gxyaa"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ftd2a"]
bounce = 0.2

[sub_resource type="Animation" id="Animation_gxyaa"]
resource_name = "Intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("cameraMarker:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 12.5664, 0)]
}

[sub_resource type="Animation" id="Animation_v581j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cameraMarker:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_akl51"]
_data = {
&"Intro": SubResource("Animation_gxyaa"),
&"RESET": SubResource("Animation_v581j")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_r4ode"]
radius = 20.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ok1y2"]
load_path = "res://.godot/imported/spark_pixel.png-bae39c4c9f802cfe44f9081db3e4486c.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7mt31"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = SubResource("CompressedTexture2D_ok1y2")
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_shpg4"]
material = SubResource("StandardMaterial3D_7mt31")
size = Vector2(0.1, 1.5)
orientation = 0

[sub_resource type="Gradient" id="Gradient_8esrd"]
offsets = PackedFloat32Array(0, 0.482143, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3mbtk"]
load_path = "res://.godot/imported/spark_pixel.png-bae39c4c9f802cfe44f9081db3e4486c.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8yyva"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = SubResource("CompressedTexture2D_3mbtk")
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_d15r7"]
material = SubResource("StandardMaterial3D_8yyva")
size = Vector2(0.05, 1.25)
orientation = 0

[sub_resource type="Curve" id="Curve_vh2mb"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0.561069, 1.5), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_35dkc"]
offsets = PackedFloat32Array(0, 0.116071, 0.3125, 0.616071, 0.776786, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.65098, 0.988235, 0.858824, 1, 0.12549, 0.839216, 0.780392, 1, 0.145098, 0.517647, 0.772549, 0.976471, 0.156863, 0.360784, 0.768627, 1, 0.0784314, 0.203922, 0.392157, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_6bnmi"]
material = SubResource("StandardMaterial3D_8yyva")
size = Vector2(0.1, 1.5)
orientation = 0

[sub_resource type="Curve" id="Curve_n2rug"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0.561069, 1.5), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_lpxf1"]
offsets = PackedFloat32Array(0, 0.116071, 0.267857, 0.571429, 0.803571, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.988235, 0.25098, 1, 0.976471, 0.639216, 0.105882, 1, 0.980392, 0.415686, 0.0392157, 1, 0.87451, 0.243137, 0.137255, 1, 0.45098, 0.0901961, 0.176471, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_mo2r1"]
material = SubResource("StandardMaterial3D_8yyva")
size = Vector2(0.1, 1.5)
orientation = 0

[sub_resource type="Curve" id="Curve_vbfkx"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 2.27547), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_jv7t4"]
offsets = PackedFloat32Array(0, 0.0625, 0.285714, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.960784, 0.627451, 0.592157, 1, 0.737255, 0.290196, 0.607843, 1, 0.47451, 0.227451, 0.501961, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5vttf"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_3pghx"]
material = SubResource("StandardMaterial3D_5vttf")
radius = 0.25
height = 0.5
radial_segments = 6
rings = 6

[sub_resource type="Curve" id="Curve_4mmfh"]
_data = [Vector2(0, 0.698113), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_t3rwd"]
offsets = PackedFloat32Array(0, 0.375, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="SphereMesh" id="SphereMesh_uyn2s"]
material = SubResource("StandardMaterial3D_5vttf")
radius = 0.25
height = 0.5
radial_segments = 6
rings = 6

[sub_resource type="Curve" id="Curve_f2ya1"]
_data = [Vector2(0, 0.698113), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_s8d68"]
offsets = PackedFloat32Array(0, 0.267857, 0.785714, 1)
colors = PackedColorArray(0.258824, 0.223529, 0.203922, 1, 0.231373, 0.0901961, 0.145098, 1, 0.0235294, 0.0235294, 0.0313726, 1, 0.0235294, 0.0235294, 0.0313726, 0)

[sub_resource type="SphereMesh" id="SphereMesh_der00"]
material = SubResource("StandardMaterial3D_5vttf")
radius = 0.25
height = 0.5
radial_segments = 6
rings = 6

[sub_resource type="Curve" id="Curve_3cyek"]
_data = [Vector2(0, 0.00204718), 0.0, 0.0, 0, 0, Vector2(0.113309, 1), 0.0, 0.0, 0, 0, Vector2(0.742806, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_b8gfh"]
offsets = PackedFloat32Array(0, 0.375, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n4v2g"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_t1uoe"]
material = SubResource("StandardMaterial3D_n4v2g")
radial_segments = 8
rings = 4

[sub_resource type="Curve" id="Curve_2xhbe"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_a7ct7"]
offsets = PackedFloat32Array(0, 0.627193, 1)
colors = PackedColorArray(0, 0, 0, 0.588235, 1, 1, 1, 0.588235, 1, 1, 1, 0)

[sub_resource type="SphereMesh" id="SphereMesh_ay4ps"]
material = SubResource("StandardMaterial3D_n4v2g")
radial_segments = 8
rings = 4

[sub_resource type="Curve" id="Curve_c4g8h"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.811741, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_uf3qp"]
offsets = PackedFloat32Array(0, 0.0964912, 0.22807, 0.350877, 0.526316, 0.72807, 0.938596, 1)
colors = PackedColorArray(0.0784314, 0.0627451, 0.0745098, 1, 0.231373, 0.0901961, 0.145098, 1, 0.45098, 0.0901961, 0.176471, 1, 0.705882, 0.12549, 0.164706, 1, 0.980392, 0.415686, 0.0392157, 1, 0.976471, 0.639216, 0.105882, 1, 1, 0.988235, 0.25098, 1, 1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jg7oi"]
transparency = 1
blend_mode = 1
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4_ocgml")
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_ea3kf"]
material = SubResource("StandardMaterial3D_jg7oi")
orientation = 2

[sub_resource type="Gradient" id="Gradient_40jru"]
offsets = PackedFloat32Array(0, 0.118421, 0.425439, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.784314, 1, 1, 1, 0.784314, 1, 1, 1, 0)

[sub_resource type="SphereShape3D" id="SphereShape3D_xi2ir"]
radius = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_5l0jt"]
radius = 1.0
height = 2.0
radial_segments = 8
rings = 8

[node name="CarNode" type="RigidBody3D" groups=["raceCar"]]
physics_material_override = SubResource("PhysicsMaterial_ftd2a")
gravity_scale = 5.0
can_sleep = false
angular_damp = 10.0
script = ExtResource("1_ww58n")
drift_camera_offset = Vector3(0, 4, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_akl51")
}

[node name="cameraMarker" type="Marker3D" parent="."]
unique_name_in_owner = true
top_level = true

[node name="Camera3D" parent="cameraMarker" node_paths=PackedStringArray("follow_target") instance=ExtResource("2_gxyaa")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.76, 3.885)
top_level = true
cull_mask = 1048573
follow_target = NodePath("../../Jupiter5/mainCar")

[node name="Jupiter5" parent="." instance=ExtResource("2_4b6dd")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.41, 0)
top_level = true

[node name="Vent" parent="Jupiter5" index="1"]
visible = false

[node name="targetArea" type="Area3D" parent="Jupiter5"]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Jupiter5/targetArea"]
shape = SubResource("SphereShape3D_r4ode")

[node name="groundRay" type="RayCast3D" parent="Jupiter5"]
unique_name_in_owner = true
transform = Transform3D(1, 0, -6.3573e-08, 0, 1, 0, 6.3573e-08, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, -5, 0)

[node name="SparkVFX" type="Node3D" parent="Jupiter5"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 2.21284e-07, 0.202619, -1.4655)

[node name="driftSFX" type="AudioStreamPlayer3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
stream = ExtResource("3_plo0f")
max_distance = 12.0
bus = &"SFX"

[node name="whiteSparks" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
emitting = false
amount = 16
lifetime = 0.7
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
local_coords = true
mesh = SubResource("PlaneMesh_shpg4")
particle_flag_align_y = true
direction = Vector3(0, 1, 0)
spread = 75.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 4.0
initial_velocity_max = 5.0
damping_min = 5.0
damping_max = 10.0
scale_amount_min = 0.1
color_ramp = SubResource("Gradient_8esrd")

[node name="blueSparks" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
amount = 20
lifetime = 0.7
lifetime_randomness = 0.5
local_coords = true
mesh = SubResource("PlaneMesh_d15r7")
particle_flag_align_y = true
direction = Vector3(0, 1, 0)
spread = 75.0
gravity = Vector3(0, -1, 0)
initial_velocity_min = 1.0
initial_velocity_max = 3.0
scale_amount_min = 0.05
scale_amount_max = 0.7
scale_amount_curve = SubResource("Curve_vh2mb")
color_ramp = SubResource("Gradient_35dkc")

[node name="fireSparks" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
emitting = false
amount = 20
lifetime = 0.7
lifetime_randomness = 0.5
local_coords = true
mesh = SubResource("PlaneMesh_6bnmi")
particle_flag_align_y = true
direction = Vector3(0, 1, 0)
spread = 75.0
gravity = Vector3(0, -1, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
scale_amount_min = 0.05
scale_amount_max = 0.7
scale_amount_curve = SubResource("Curve_n2rug")
color_ramp = SubResource("Gradient_lpxf1")

[node name="superSparks" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
emitting = false
amount = 40
lifetime = 0.7
lifetime_randomness = 0.5
local_coords = true
mesh = SubResource("PlaneMesh_mo2r1")
particle_flag_align_y = true
direction = Vector3(0, 1, 0)
spread = 75.0
gravity = Vector3(0, 0.5, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
scale_amount_min = 0.05
scale_amount_max = 0.7
scale_amount_curve = SubResource("Curve_vbfkx")
color_ramp = SubResource("Gradient_jv7t4")

[node name="smokeCloud" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
local_coords = true
mesh = SubResource("SphereMesh_3pghx")
direction = Vector3(0, 1, 0)
spread = 90.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 2.0
damping_max = 2.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_4mmfh")
color = Color(1, 1, 1, 0.588235)
color_ramp = SubResource("Gradient_t3rwd")

[node name="blackSmokeCloud" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
emitting = false
amount = 10
mesh = SubResource("SphereMesh_uyn2s")
direction = Vector3(0, 1, 0)
spread = 90.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_f2ya1")
color = Color(1, 1, 1, 0.588235)
color_ramp = SubResource("Gradient_s8d68")

[node name="smokeTrail" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
amount = 16
mesh = SubResource("SphereMesh_der00")
direction = Vector3(0, 1, 0)
spread = 90.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.5
initial_velocity_max = 0.5
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_3cyek")
color = Color(1, 1, 1, 0.588235)
color_ramp = SubResource("Gradient_b8gfh")

[node name="blackSmokeTrail" type="CPUParticles3D" parent="Jupiter5/SparkVFX"]
unique_name_in_owner = true
emitting = false
amount = 16
local_coords = true
mesh = SubResource("SphereMesh_uyn2s")
direction = Vector3(0, 1, 0)
spread = 90.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_f2ya1")
color = Color(1, 1, 1, 0.588235)
color_ramp = SubResource("Gradient_s8d68")

[node name="TurboVFX" type="Node3D" parent="Jupiter5"]
transform = Transform3D(1, 0, -6.3573e-08, 0, 1, 0, 6.3573e-08, 0, 1, 0, 0, 0)

[node name="smallTurboVFX" type="CPUParticles3D" parent="Jupiter5/TurboVFX"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13219e-07, 0, -1.29508)
emitting = false
amount = 16
explosiveness = 0.8
lifetime_randomness = 0.5
local_coords = true
mesh = SubResource("SphereMesh_t1uoe")
direction = Vector3(0, 0.5, -1)
spread = 20.0
gravity = Vector3(0, 2, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
scale_amount_curve = SubResource("Curve_2xhbe")
color_ramp = SubResource("Gradient_a7ct7")

[node name="FireTurboVFX" type="CPUParticles3D" parent="Jupiter5/TurboVFX"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13219e-07, 0, -1.29508)
emitting = false
amount = 32
lifetime_randomness = 0.5
local_coords = true
mesh = SubResource("SphereMesh_ay4ps")
direction = Vector3(0, 0.5, -1)
spread = 20.0
flatness = 0.5
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
scale_amount_curve = SubResource("Curve_c4g8h")
color_ramp = SubResource("Gradient_uf3qp")

[node name="squareTurboVFX" type="CPUParticles3D" parent="Jupiter5/TurboVFX"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.390355, 0)
emitting = false
amount = 12
mesh = SubResource("PlaneMesh_ea3kf")
gravity = Vector3(0, 0, 10)
angular_velocity_min = 100.0
angular_velocity_max = 100.0
color_ramp = SubResource("Gradient_40jru")

[node name="RightTireMarker" type="Marker3D" parent="Jupiter5"]
transform = Transform3D(1, 0, -6.3573e-08, 0, 1, 0, 6.3573e-08, 0, 1, -0.560187, 0.0235478, -1.05945)

[node name="LeftTireMarker" type="Marker3D" parent="Jupiter5"]
transform = Transform3D(1, 0, -6.3573e-08, 0, 1, 0, 6.3573e-08, 0, 1, 0.655457, 0.0235478, -1.05945)

[node name="characterMarker" type="Marker3D" parent="Jupiter5"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)

[node name="SFX" type="Node3D" parent="."]

[node name="motorSFX" type="AudioStreamPlayer3D" parent="SFX"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.852248, 1.32892)
stream = ExtResource("5_n15bs")
volume_db = -10.0
max_distance = 100.0
bus = &"SFX"
doppler_tracking = 2

[node name="turboSFX" type="AudioStreamPlayer3D" parent="SFX"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.44223, 0.957505)
stream = ExtResource("6_88u8a")
bus = &"SFX"
doppler_tracking = 2

[node name="sparkSFX" type="AudioStreamPlayer3D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("6_11ujl")
bus = &"SFX"

[node name="fireSFX" type="AudioStreamPlayer3D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("6_56tl7")
bus = &"SFX"

[node name="lightningSFX" type="AudioStreamPlayer3D" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("7_f4wrq")
bus = &"SFX"

[node name="boostTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_xi2ir")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_5l0jt")
skeleton = NodePath("")

[node name="screenEffectsMargin" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ScreenEffectsLayer" type="CanvasLayer" parent="."]

[node name="cinematicBars" parent="ScreenEffectsLayer" instance=ExtResource("3_f4y26")]
unique_name_in_owner = true

[node name="circleTransition" parent="ScreenEffectsLayer" instance=ExtResource("13_gxyaa")]
unique_name_in_owner = true

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 19.0

[connection signal="body_entered" from="Jupiter5/targetArea" to="." method="_on_target_area_body_entered"]
[connection signal="body_exited" from="Jupiter5/targetArea" to="." method="_on_target_area_body_exited"]
[connection signal="timeout" from="boostTimer" to="." method="_on_boost_timer_timeout"]

[editable path="Jupiter5"]
